test/visibility/only/onlyPrivateNotFunction.good
onlyPrivateNotFunction.chpl:14: error: Bad identifier in 'only' clause, 'd' is private
